syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.yesable_be.service.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc CreateAuth(CreatedTokenRequest) returns (CreatedTokenResponse) {}
  rpc VerifyAuth(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message AuthData {
  string id = 1;
  string pw = 2;
  string token = 3;
  int64 createTime = 4;
  int64 expireTime = 5;
}

message Verify {
  ResponseType status = 1;
  AuthData auth = 2;
}

enum ResponseType {
  SUCCESS = 0;
  FAILED = 1;
  EXPIRED_TIME = 2;
}

message CreatedTokenRequest {
  AuthData auth = 1;
}

message CreatedTokenResponse {
  AuthData auth = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  Verify v = 1;
}